# somnio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.cursor/: cli.json
.cursor/plans/: part_a_zutils_design_e6203630.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  task.yml
.github/workflows/: cursor-code-review.yml  docs.yml  publish-pypi.yml  ruff.yaml  tests.yml  verify-testpypi.yml
docs/: contributing.md  getting-started.md  index.md  release-notes.md
docs/reference/: cli.md  data.md  io-base.md  io-hdf5.md  io.md
docs/stylesheets/: extra.css
docs/user-guide/: cli.md  data.md  download-nsrr.md  io-hdf5.md
src/somnio/: __init__.py
src/somnio/cli/: main.py
src/somnio/cli/commands/: nsrr.py
src/somnio/cli/utils/: logging.py
src/somnio/data/: __init__.py  annotations.py  timeseries.py  units.py
src/somnio/data/adapters/: __init__.py  mne.py
src/somnio/devices/: __init__.py
src/somnio/devices/zmax/: __init__.py  client.py  constants.py  enums.py  protocol.py
src/somnio/io/: __init__.py  base.py
src/somnio/io/edf/: __init__.py  standard.py  utils.py  zmax.py
src/somnio/io/hdf5/: __init__.py  native.py  usleep.py
src/somnio/pipeline/: __init__.py  config.py  engine.py  errors.py  resolve.py  types.py
src/somnio/schemas/: __init__.py  pipeline.py  yaml.py
src/somnio/tasks/: __init__.py
src/somnio/tasks/eye_movement/: __init__.py  defaults.py  detect.py  event.py
src/somnio/tasks/sleep_scoring/: __init__.py  backend.py  schema.py  score.py  windowing.py
src/somnio/transforms/: __init__.py  clip.py  filter.py  resample.py  scale.py  signal.py
src/somnio/utils/: __init__.py  imports.py
src/zutils/: __init__.py
src/zutils/cli/: main.py
src/zutils/cli/commands/: __init__.py  hello.py
src/zutils/cli/utils/: logging.py
src/zutils/data/: __init__.py  timeseries.py
src/zutils/data/adapters/: __init__.py  mne.py
src/zutils/io/: __init__.py  base.py  hdf5.py
tests/: test_smoke.py
tests/test_cli/: test_main.py
tests/test_data/: test_adapters_mne.py  test_annotations.py  test_timeseries.py
tests/test_devices/: test_zmax.py
tests/test_io/: test_edf_standard.py  test_edf_zmax.py  test_hdf5.py  test_hdf5_native.py  test_hdf5_usleep.py
tests/test_pipeline/: test_engine.py
tests/test_tasks/test_eye_movement/: test_detect.py  test_event.py
tests/test_tasks/test_sleep_scoring/: test_windowing.py
tests/test_transforms/: test_clip.py  test_resample.py  test_scale.py
(+12 files in other folders)
