[project]
name = "zutils"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Ali Saberi", email = "ali.saberi96@gmail.com" }
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
zutils = "zutils:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    {include-group = "lint"},
    "pre-commit>=4.5.1",
]
lint = [
    "ruff>=0.14.14",
]

[tool.uv.dependency-groups]
dev = {requires-python = ">=3.12"}
