[project]
name = "somnio"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Ali Saberi", email = "ali.saberi96@gmail.com" }
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.24"]

[project.scripts]
somnio = "somnio.cli.main:app"

[project.optional-dependencies]
hdf5 = ["h5py>=3.8"]
cli = [
    "loguru>=0.7.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tqdm>=4.67.3",
    "typer>=0.21.1",
]
edf = [
    "edfio>=0.4",
    "mne>=1.5",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "test"},
    "pre-commit>=4.5.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocs-typer2>=0.2.0",
    "pymdown-extensions>=10.14.0",
]
lint = [
    "ruff>=0.14.14",
]
test = [
    "pytest>=9.0.2",
    "h5py>=3.8",
    "mne>=1.5",
    "edfio>=0.4",
]

[tool.uv.dependency-groups]
dev = {requires-python = ">=3.12"}

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
# Enforce a consistent TODO convention:
# - Use TODO (not FIXME/XXX)
# - Keep formatting consistent after `TODO:` / `TODO(name):`
# Note: We intentionally do NOT require authors (TD002) or issue links (TD003).
extend-select = ["TD001", "TD007"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
